--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,8 @@
 STAGE 1
-  Aim, shoot rock
-  Switch camera (active stone overhead, house overhead, first person thrower)
+  Aim, shoot rock DONE
+  Switch camera (active stone overhead, house overhead, first person thrower) DONE
   Game management
+  State Machine
 
   
 STAGE 2
